--- a/abmath.sty
+++ b/abmath.sty
@@ -9,6 +9,9 @@
 \DeclareRobustCommand{\nue}{\nu_{e}}
 \DeclareRobustCommand{\numu}{\nu_{\mu}}
 \DeclareRobustCommand{\nutau}{\nu_{\tau}}
+\DeclareRobustCommand{\nuebar}{\bar{\nu}_{e}}
+\DeclareRobustCommand{\numubar}{\bar{\nu}_{\mu}}
+\DeclareRobustCommand{\nutaubar}{\bar{\nu}_{\tau}}
 \DeclareRobustCommand{\nuone}{\nu_{1}}
 \DeclareRobustCommand{\nutwo}{\nu_{2}}
 \DeclareRobustCommand{\nuthree}{\nu_{3}}
@@ -24,6 +27,12 @@
 \renewcommand{\numu}{\mymath{\@Oldnumu}\xspace}%
 \let\@Oldnutau\nutau%
 \renewcommand{\nutau}{\mymath{\@Oldnutau}\xspace}%
+\let\@Oldnuebar\nuebar%
+\renewcommand{\nuebar}{\mymath{\@Oldnuebar}\xspace}%
+\let\@Oldnumubar\numubar%
+\renewcommand{\numubar}{\mymath{\@Oldnumubar}\xspace}%
+\let\@Oldnutaubar\nutaubar%
+\renewcommand{\nutaubar}{\mymath{\@Oldnutaubar}\xspace}%
 \let\@Oldnuone\nuone%
 \renewcommand{\nuone}{\mymath{\@Oldnuone}\xspace}%
 \let\@Oldnutwo\nutwo%
