--- a/chap5-VALOR_Analysis.tex
+++ b/chap5-VALOR_Analysis.tex
@@ -1,6 +1,8 @@
 \chapter{VALOR Analysis}
 \label{chap:VALOR}
 
+Keep numu section? Perhaps too much overlap with Rhiannon's stuff.
+
 \section{VALOR Framework}
 \section{\texorpdfstring{$\nu_\mu$ and $\nu_e$ Selections}{numu and nue Selections}}
 Link in with Energy Reco. section
@@ -12,3 +14,17 @@ MEC and POT
 \section{\texorpdfstring{$\nu_e$ Appearance Analysis}{nue Appearance Analysis}}
 \section{\texorpdfstring{$\nu_e$ Disappearance Analysis}{nue Disappearance Analysis}}
 \section{Additional Efficiency and Energy Scale Systematics}
+
+
+Plots to include
+\begin{itemize}
+    \item Spline validation plots + tick table (will need to 'make these look good')
+    \item Standard spectra x3
+    \item Spectra with error envelopes (will need some work - think this was a pain cos have to force osc params so the osc sample is actually used.)
+    \item Spectra (ratios) with various oscillation params ala tech note.
+    \item contribution to sensitivity from each detector + detector combos.
+    \item Contribution from each systematic group.
+    \item Impact of various detector systematics 
+    \item Standard exclusion/allowed sensitivities with all systematics (pick some value for the detector syst).
+    \item Sensitivities with external limits.
+\end{itemize}
