--- a/glossary.tex
+++ b/glossary.tex
@@ -2,31 +2,50 @@
 %  name={domain knowledge},%
 %  description={valid knowledge used to refer to an area of human endeavour, an autonomous computer activity, or other specialized discipline}}
 
-\newacronym{tla}{TLA}{Three Letter Acronym}
-\newacronym{nist}{NIST}{National Institute of Standards and Technology}
+\newacronym{adc}{ADC}{Analog Digital Converter}
+\newacronym{apa}{APA}{Andode Plane Assembly}
+\newacronym{argoneut}{ArgoNeuT}{Argon Neutrino Test Stand}
+\newacronym{bnb}{BNB}{Booster Neutrino Beam}
+\newacronym{cc}{CC}{Charged Current}
+\newacronym{ccqe}{CCQE}{Charged Current Quasi Elastic}
+\newacronym{cp}{CP}{charge-parity}
+\newacronym{cpa}{CPA}{Cathode Plane Assembly}
+\newacronym{crt}{CRT}{Cosmic Ray Tagger}
+\newacronym{donut}{DONUT}{Direct Observation of the Nu Tau}
+\newacronym{dune}{DUNE}{Deep Underground Neutrino Experiment}
+\newacronym{em}{EM}{electromagnetic}
+\newacronym{es}{ES}{Elastic Scattering}
+\newacronym{fermilab}{Fermilab}{Fermi National Accelerator Laboratory}
+\newacronym{fnal}{FNAL}{Fermi National Accelerator Laboratory}
+\newacronym{gallex}{GALLEX}{Gallium Experiment}
+\newacronym{icarus}{ICARUS}{Imaging Cosmic and Rare Underground Signals}
+\newacronym{karmen}{KARMEN}{Karlsruhe Rutherford Medium Energy Neutrino}
 \newacronym{larsoft}{LArSoft}{Liquid Argon Software}
-\newacronym{sbn}{SBN}{Short Baseline Neutrino (Program)}
+\newacronym{lartpc}{LArTPC}{Liquid Argon Time Projection Chamber}
+\newacronym{lep}{LEP}{Large Electron-Positron Collider}
+\newacronym{lsnd}{LSND}{Liquid Scintillator Neutrino Detector}
+\newacronym{mc}{MC}{Monte Carlo}
+\newacronym{microboone}{MicroBooNE}{Micro Booster Neutrino Experiment}
+\newacronym{miniboone}{MiniBooNE}{Mini Booster Neutrino Experiment}
+\newacronym{minos}{MINOS}{Main Injector Neutrino Oscillation Search}
+\newacronym{mip}{MIP}{Minimum Ionising Particle}
+\newacronym{nc}{NC}{Neutral Current}
+\newacronym{nist}{NIST}{National Institute of Standards and Technology}
+\newacronym{p}{P}{parity}
+\newacronym{pdg}{PDG}{Particle Data Group}
+\newacronym{pmns}{PMNS}{Pontecorvo-Maki-Nakagawa-Sakata}
+\newacronym{pmt}{PMT}{Photo Multiplier Tube}
+\newacronym{sage}{SAGE}{Soviet-American Gallium Experiment}
+\newacronym{sbn}{SBN}{Short Baseline Neutrino}
 \newacronym{sbnd}{SBND}{Short Baseline Near Detector}
 \newacronym{sce}{SCE}{Space Charge Effect}
-\newacronym{sp}{SP}{Space Point}
-\newacronym{argoneut}{ArgoNeuT}{Argon Neutrino Test Stand}
-\newacronym{mc}{MC}{Monte Carlo}
-\newacronym{mip}{MIP}{Minimum Ionising Particle}
-\newacronym{adc}{ADC}{Analog Digital Converter}
-\newacronym{tpc}{TPC}{Time Projection Chamber}
-\newacronym{cpa}{CPA}{Cathode Plane Assembly}
-\newacronym{apa}{APA}{Andode Plane Assembly}
-\newacronym{pmt}{PMT}{Photo Multiplier Tube}
-\newacronym{donut}{DONUT}{Direct Observation of the Nu Tau}
-\newacronym{fermilab}{Fermilab}{Fermi National Accelerator Laboratory}
-\newacronym{sm}{SM}{Standard Model}
 \newacronym{sk}{SK}{Super Kamiokande}
+\newacronym{sm}{SM}{Standard Model}
 \newacronym{sno}{SNO}{Sudbury Neutrino Observatory}
-\newacronym{cc}{CC}{Charged Current}
-\newacronym{nc}{NC}{Neutral Current}
-\newacronym{es}{ES}{Elastic Scattering}
-\newacronym{pmns}{PMNS}{Pontecorvo-Maki-Nakagawa-Sakata}
-\newacronym{cp}{CP}{Charge-Parity}
-\newacronym{pdg}{PDG}{Particle Data Group}
+\newacronym{sp}{SP}{Space Point}
+\newacronym{tla}{TLA}{Three Letter Acronym}
+\newacronym{tpc}{TPC}{Time Projection Chamber}
+
+
 
 
