--- a/main.tex
+++ b/main.tex
@@ -57,10 +57,10 @@
   %% Actually, more semantic chapter filenames are better, like "chap-bgtheory.tex"
   %\input{chap1-introduction}
   \input{chap2-motivation_for_steriles}
-  %\input{chap3-SBN_Program}
-  %\input{chap4-Energy_Reco}
-  %\input{chap5-VALOR_Analysis}
-  %\input{chap6-Conclusion}
+  \input{chap3-SBN_Program}
+  \input{chap4-Energy_Reco}
+  \input{chap5-VALOR_Analysis}
+  \input{chap6-Conclusion}
   %% To ignore a specific chapter while working on another, making the build faster, comment it out:
   %\input{chap4}
 \end{mainmatter}
