--- a/mythesis.bib
+++ b/mythesis.bib
@@ -40,13 +40,28 @@
     pages = "083C01",
     year = "2020"
 }
+@book{Fundamentals_of_Neutrino_Physics_and_Astrophysics,
+    author = "Giunti, Carlo and Chung W. Kim",
+    title = "Fundamentals of Neutrino Physics and Astrophysics.",
+    publisher = "Oxford: Oxford University Press",
+    year = "2007",  
+    doi = "10.1093/acprof:oso/9780198508717.001.0001"
+} 
+
+@BOOK{MartinandShaw,
+    author = {{Martin}, B.~R. and {Shaw}, G.},
+    title = "{Particle Physics, Third Edition}",
+    year = 2008,
+    publisher = "John Wiley and Sons, Ltd, Publication"
+}
+
 
 
 % chap2 - neutrino theory
 @misc{Pauli_letter,
       author        = "Pauli, Wolfgang",
       title         = "{Pauli letter collection: letter to Lise Meitner}",
-      howpublished  = "https://cds.cern.ch/record/83282",
+      howpublished  = {\href{https://cds.cern.ch/record/83282}{https://cds.cern.ch/record/83282}},
       note          = "Typed copy, [Accessed September 2021]",
 }
 
@@ -114,7 +129,7 @@
    volume={81},
    ISSN={1079-7114},
    url={http://dx.doi.org/10.1103/PhysRevLett.81.1562},
-   DOI={10.1103/physrevlett.81.1562},
+   doi={10.1103/physrevlett.81.1562},
    number={8},
    journal={Physical Review Letters},
    publisher={American Physical Society (APS)},
@@ -125,7 +140,7 @@
 }
 
 @article{SNO_solar_neutrinos,
-  title = {Measurement of the Rate of ${\ensuremath{\nu}}_{e}+\mathit{d}\ensuremath{\rightarrow}\mathit{p}+\mathit{p}+{\mathit{e}}^{\ensuremath{-}}$ Interactions Produced by $^{8}B$ Solar Neutrinos at the Sudbury Neutrino Observatory},
+  title = "{Measurement of the Rate of ${\ensuremath{\nu}}_{e}+\mathit{d}\ensuremath{\rightarrow}\mathit{p}+\mathit{p}+{\mathit{e}}^{\ensuremath{-}}$ Interactions Produced by $^{8}B$ Solar Neutrinos at the Sudbury Neutrino Observatory}",
   author = {Ahmad, Q. R. and others},
   collaboration = {SNO Collaboration},
   journal = {Phys. Rev. Lett.},
@@ -180,19 +195,19 @@
 }
 
 @article{MiniBooNE_excess,
-  title = {Search for Electron Neutrino Appearance at the $\ensuremath{\Delta}{m}^{2}\ensuremath{\sim}1\text{ }\text{ }{\mathrm{eV}}^{2}$ Scale},
-  author = {Aguilar-Arevalo, A. A. and Bazarko, A. O. and Brice, S. J. and Brown, B. C. and Bugel, L. and Cao, J. and Coney, L. and Conrad, J. M. and Cox, D. C. and Curioni, A. and Djurcic, Z. and Finley, D. A. and Fleming, B. T. and Ford, R. and Garcia, F. G. and Garvey, G. T. and Green, C. and Green, J. A. and Hart, T. L. and Hawker, E. and Imlay, R. and Johnson, R. A. and Kasper, P. and Katori, T. and Kobilarcik, T. and Kourbanis, I. and Koutsoliotas, S. and Laird, E. M. and Link, J. M. and Liu, Y. and Liu, Y. and Louis, W. C. and Mahn, K. B. M. and Marsh, W. and Martin, P. S. and McGregor, G. and Metcalf, W. and Meyers, P. D. and Mills, F. and Mills, G. B. and Monroe, J. and Moore, C. D. and Nelson, R. H. and Nienaber, P. and Ouedraogo, S. and Patterson, R. B. and Perevalov, D. and Polly, C. C. and Prebys, E. and Raaf, J. L. and Ray, H. and Roe, B. P. and Russell, A. D. and Sandberg, V. and Schirato, R. and Schmitz, D. and Shaevitz, M. H. and Shoemaker, F. C. and Smith, D. and Sorel, M. and Spentzouris, P. and Stancu, I. and Stefanski, R. J. and Sung, M. and Tanaka, H. A. and Tayloe, R. and Tzanov, M. and Van de Water, R. and Wascko, M. O. and White, D. H. and Wilking, M. J. and Yang, H. J. and Zeller, G. P. and Zimmerman, E. D.},
+  title = {Significant Excess of Electronlike Events in the MiniBooNE Short-Baseline Neutrino Experiment},
+  author = {Aguilar-Arevalo, A. A. and Brown, B. C. and Bugel, L. and Cheng, G. and Conrad, J. M. and Cooper, R. L. and Dharmapalan, R. and Diaz, A. and Djurcic, Z. and Finley, D. A. and Ford, R. and Garcia, F. G. and Garvey, G. T. and Grange, J. and Huang, E.-C. and Huelsnitz, W. and Ignarra, C. and Johnson, R. A. and Karagiorgi, G. and Katori, T. and Kobilarcik, T. and Louis, W. C. and Mariani, C. and Marsh, W. and Mills, G. B. and Mirabal, J. and Monroe, J. and Moore, C. D. and Mousseau, J. and Nienaber, P. and Nowak, J. and Osmanov, B. and Pavlovic, Z. and Perevalov, D. and Ray, H. and Roe, B. P. and Russell, A. D. and Shaevitz, M. H. and Spitz, J. and Stancu, I. and Tayloe, R. and Thornton, R. T. and Tzanov, M. and Van de Water, R. G. and White, D. H. and Wickremasinghe, D. A. and Zimmerman, E. D.},
   collaboration = {MiniBooNE Collaboration},
   journal = {Phys. Rev. Lett.},
-  volume = {98},
-  issue = {23},
-  pages = {231801},
+  volume = {121},
+  issue = {22},
+  pages = {221801},
   numpages = {7},
-  year = {2007},
-  month = {Jun},
+  year = {2018},
+  month = {Nov},
   publisher = {American Physical Society},
-  doi = {10.1103/PhysRevLett.98.231801},
-  url = {https://link.aps.org/doi/10.1103/PhysRevLett.98.231801}
+  doi = {10.1103/PhysRevLett.121.221801},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.121.221801}
 }
 
 @article{GALLEX,
@@ -251,7 +266,7 @@ abstract = {After the completion of the gallium solar neutrino experiments at th
    month={Apr}
 }
 
-@Inbook{Majorana2020,
+@incollection{Majorana2020,
 author="Majorana, Ettore",
 editor="Cifarelli, Luisa",
 title="A Symmetric Theory of Electrons and Positrons",
@@ -262,7 +277,7 @@ address="Cham",
 pages="113--128",
 abstract="It is shown that it is possible to achieve complete formal symmetrization in the electron and proton quantum theory by means of a new quantization process. The meaning of Dirac equations is somewhat modified and there is no longer any reason to speak of negative-energy states nor to assume, for any other types of particles, especially neutral ones, the existence of antiparticles, corresponding to the ``holes'' of negative energy.",
 isbn="978-3-030-23509-3",
-doi="10.1007/978-3-030-23509-3_11",
+doi={10.1007/978-3-030-23509-3_11},
 url="https://doi.org/10.1007/978-3-030-23509-3_11"
 }
 
@@ -316,6 +331,255 @@ url="https://doi.org/10.1007/978-3-030-23509-3_11"
     pages = "89--130",
     month = "7",
     year = "2000"
+}
+
+@inproceedings{KARMEN,
+    author = "Eitel, Klaus",
+    collaboration = "KARMEN",
+    title = "{KARMEN: Present neutrino oscillation limits and perspectives after the upgrade}",
+    booktitle = "{32nd Rencontres de Moriond: Electroweak Interactions and Unified Theories}",
+    eprint = "hep-ex/9706023",
+    archivePrefix = "arXiv",
+    pages = "267--274",
+    year = "1997"
+}
+
+@article{MINOS,
+  title = {Search for Sterile Neutrinos Mixing with Muon Neutrinos in MINOS},
+  author = {Adamson, P. and Anghel, I. and Aurisano, A. and Barr, G. and Bishai, M. and Blake, A. and Bock, G. J. and Bogert, D. and Cao, S. V. and Carroll, T. J. and Castromonte, C. M. and Chen, R. and Childress, S. and Coelho, J. A. B. and Corwin, L. and Cronin-Hennessy, D. and de Jong, J. K. and De Rijck, S. and Devan, A. V. and Devenish, N. E. and Diwan, M. V. and Escobar, C. O. and Evans, J. J. and Falk, E. and Feldman, G. J. and Flanagan, W. and Frohne, M. V. and Gabrielyan, M. and Gallagher, H. R. and Germani, S. and Gomes, R. A. and Goodman, M. C. and Gouffon, P. and Graf, N. and Gran, R. and Grzelak, K. and Habig, A. and Hahn, S. R. and Hartnell, J. and Hatcher, R. and Holin, A. and Huang, J. and Hylen, J. and Irwin, G. M. and Isvan, Z. and James, C. and Jensen, D. and Kafka, T. and Kasahara, S. M. S. and Koizumi, G. and Kordosky, M. and Kreymer, A. and Lang, K. and Ling, J. and Litchfield, P. J. and Lucas, P. and Mann, W. A. and Marshak, M. L. and Mayer, N. and McGivern, C. and Medeiros, M. M. and Mehdiyev, R. and Meier, J. R. and Messier, M. D. and Miller, W. H. and Mishra, S. R. and Moed Sher, S. and Moore, C. D. and Mualem, L. and Musser, J. and Naples, D. and Nelson, J. K. and Newman, H. B. and Nichol, R. J. and Nowak, J. A. and O'Connor, J. and Orchanian, M. and Pahlka, R. B. and Paley, J. and Patterson, R. B. and Pawloski, G. and Perch, A. and Pf\"utzner, M. M. and Phan, D. D. and Phan-Budd, S. and Plunkett, R. K. and Poonthottathil, N. and Qiu, X. and Radovic, A. and Rebel, B. and Rosenfeld, C. and Rubin, H. A. and Sail, P. and Sanchez, M. C. and Schneps, J. and Schreckenberger, A. and Schreiner, P. and Sharma, R. and Sousa, A. and Tagg, N. and Talaga, R. L. and Thomas, J. and Thomson, M. A. and Tian, X. and Timmons, A. and Todd, J. and Tognini, S. C. and Toner, R. and Torretta, D. and Tzanakos, G. and Urheim, J. and Vahle, P. and Viren, B. and Weber, A. and Webb, R. C. and White, C. and Whitehead, L. and Whitehead, L. H. and Wojcicki, S. G. and Zwaska, R.},
+  collaboration = {MINOS Collaboration},
+  journal = {Phys. Rev. Lett.},
+  volume = {117},
+  issue = {15},
+  pages = {151803},
+  numpages = {7},
+  year = {2016},
+  month = {Oct},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.117.151803},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.117.151803}
+}
+
+@article{Goldhaber_experiment,
+  title = {Helicity of Neutrinos},
+  author = {Goldhaber, M. and Grodzins, L. and Sunyar, A. W.},
+  journal = {Phys. Rev.},
+  volume = {109},
+  issue = {3},
+  pages = {1015--1017},
+  numpages = {0},
+  year = {1958},
+  month = {Feb},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRev.109.1015},
+  url = {https://link.aps.org/doi/10.1103/PhysRev.109.1015}
+}
+
+@ARTICLE{Wu_experiment,
+       author = {{Wu}, C.~S. and {Ambler}, E. and {Hayward}, R.~W. and {Hoppes}, D.~D. and {Hudson}, R.~P.},
+        title = "{Experimental Test of Parity Conservation in Beta Decay}",
+      journal = {Physical Review},
+         year = 1957,
+        month = feb,
+       volume = {105},
+       number = {4},
+        pages = {1413-1415},
+          doi = {10.1103/PhysRev.105.1413},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1957PhRv..105.1413W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{Cronin_and_Fitch_experiment,
+  title = {Evidence for the $2\ensuremath{\pi}$ Decay of the $K_{2}^{0}$ Meson},
+  author = {Christenson, J. H. and Cronin, J. W. and Fitch, V. L. and Turlay, R.},
+  journal = {Phys. Rev. Lett.},
+  volume = {13},
+  issue = {4},
+  pages = {138--140},
+  numpages = {0},
+  year = {1964},
+  month = {Jul},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.13.138},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.13.138}
+}
+
+@article{LEP,
+    author = "Decamp, D. and others",
+    collaboration = "ALEPH",
+    title = "{Determination of the Number of Light Neutrino Species}",
+    reportNumber = "CERN EP 89-132",
+    doi = "10.1016/0370-2693(89)90704-1",
+    journal = "Phys. Lett. B",
+    volume = "231",
+    pages = "519--529",
+    year = "1989"
+}
+
+
+@article{Sakharov_conditions,
+	doi = {10.1070/pu1991v034n05abeh002497},
+	url = {https://doi.org/10.1070/pu1991v034n05abeh002497},
+	year = 1991,
+	month = {may},
+	publisher = {{IOP} Publishing},
+	volume = {34},
+	number = {5},
+	pages = {392--393},
+	author = {Andrei D Sakharov},
+	title = {Violation {ofCPin} variance,Casymmetry, and baryon asymmetry of the universe},
+	journal = {Soviet Physics Uspekhi},
+	abstract = {}
+}
+
+@article{mass_hierarchy,
+   title={Neutrino mass hierarchy},
+   volume={83},
+   ISSN={0146-6410},
+   url={http://dx.doi.org/10.1016/j.ppnp.2015.05.002},
+   DOI={10.1016/j.ppnp.2015.05.002},
+   journal={Progress in Particle and Nuclear Physics},
+   publisher={Elsevier BV},
+   author={Qian, X. and Vogel, P.},
+   year={2015},
+   month={Jul},
+   pages={1–30}
+}
+
+%%%%%%%%%%%%%%%%%
+% SBN Programme %
+%%%%%%%%%%%%%%%%%
+@article{Design_and_Construction_of_the_MicroBooNE_Detector,
+author = {Acciarri, R. and Adams, C. and An, R. and Aparicio, A. and Aponte, S. and Asaadi, Jonathan and Auger, M. and Ayoub, N. and Bagby, L. and Baller, B. and Barger, R. and Barr, G. and Bass, M. and Bay, F. and Biery, K. and Bishai, M. and Blake, A. and Bocean, V. and Boehnlein, D. and Zuckerbrot, M.},
+year = {2016},
+month = {12},
+pages = {},
+title = {Design and Construction of the MicroBooNE Detector},
+volume = {12},
+journal = {Journal of Instrumentation},
+doi = {10.1088/1748-0221/12/02/P02017}
+}
+
+@article{BNB_flux,
+  title = {Neutrino flux prediction at MiniBooNE},
+  author = {Aguilar-Arevalo, A. A. and Anderson, C. E. and Bazarko, A. O. and Brice, S. J. and Brown, B. C. and Bugel, L. and Cao, J. and Coney, L. and Conrad, J. M. and Cox, D. C. and Curioni, A. and Djurcic, Z. and Finley, D. A. and Fleming, B. T. and Ford, R. and Garcia, F. G. and Garvey, G. T. and Green, C. and Green, J. A. and Hart, T. L. and Hawker, E. and Imlay, R. and Johnson, R. A. and Karagiorgi, G. and Kasper, P. and Katori, T. and Kobilarcik, T. and Kourbanis, I. and Koutsoliotas, S. and Laird, E. M. and Linden, S. K. and Link, J. M. and Liu, Y. and Liu, Y. and Louis, W. C. and Mahn, K. B. M. and Marsh, W. and Martin, P. S. and McGregor, G. and Metcalf, W. and Meyers, P. D. and Mills, F. and Mills, G. B. and Monroe, J. and Moore, C. D. and Nelson, R. H. and Nguyen, V. T. and Nienaber, P. and Nowak, J. A. and Ouedraogo, S. and Patterson, R. B. and Perevalov, D. and Polly, C. C. and Prebys, E. and Raaf, J. L. and Ray, H. and Roe, B. P. and Russell, A. D. and Sandberg, V. and Schirato, R. and Schmitz, D. and Shaevitz, M. H. and Shoemaker, F. C. and Smith, D. and Soderberg, M. and Sorel, M. and Spentzouris, P. and Stancu, I. and Stefanski, R. J. and Sung, M. and Tanaka, H. A. and Tayloe, R. and Tzanov, M. and Van de Water, R. and Wascko, M. O. and White, D. H. and Wilking, M. J. and Yang, H. J. and Zeller, G. P. and Zimmerman, E. D.},
+  collaboration = {MiniBooNE Collaboration},
+  journal = {Phys. Rev. D},
+  volume = {79},
+  issue = {7},
+  pages = {072002},
+  numpages = {38},
+  year = {2009},
+  month = {Apr},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.79.072002},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.79.072002}
+}
+
+@article{LArTPC_proposal,
+    author = "Rubbia, C.",
+    title = "{The Liquid Argon Time Projection Chamber: A New Concept for Neutrino Detectors}",
+    reportNumber = "CERN-EP-INT-77-08, CERN-EP-77-08",
+    month = "5",
+    year = "1977"
+}
+
+@book{LArTPC_book,
+    author = "Schenk, M.",
+    title = "Studies with a Liquid Argon Time Projection Chamber: Addressing Technological Challenges of Large-Scale Detectors",
+    Publisher = "Springer Specktrum",
+    Year = "2015",
+    Edition = "1",
+    Series = "BestMaster"
+}
+
+@article{Jaffe_model,
+author = {Jaffé, George},
+title = {Zur Theorie der Ionisation in Kolonnen},
+journal = {Annalen der Physik},
+volume = {347},
+number = {12},
+pages = {303-344},
+doi = {https://doi.org/10.1002/andp.19133471205},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/andp.19133471205},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/andp.19133471205},
+year = {1913}
+}
+
+@article{Recombination_box_model,
+  title = {Recombination of electron-ion pairs in liquid argon and liquid xenon},
+  author = {Thomas, J. and Imel, D. A.},
+  journal = {Phys. Rev. A},
+  volume = {36},
+  issue = {2},
+  pages = {614--616},
+  numpages = {0},
+  year = {1987},
+  month = {Jul},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevA.36.614},
+  url = {https://link.aps.org/doi/10.1103/PhysRevA.36.614}
+}
+
+@article{diffusion,
+   title={Measurement of longitudinal electron diffusion in liquid argon},
+   volume={816},
+   ISSN={0168-9002},
+   url={http://dx.doi.org/10.1016/j.nima.2016.01.094},
+   DOI={10.1016/j.nima.2016.01.094},
+   journal={Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+   publisher={Elsevier BV},
+   author={Li, Yichen and Tsang, Thomas and Thorn, Craig and Qian, Xin and Diwan, Milind and Joshi, Jyoti and Kettell, Steve and Morse, William and Rao, Triveni and Stewart, James and et al.},
+   year={2016},
+   month={Apr},
+   pages={160–170}
+}
+
+@article{microboone_detector,
+   title={Design and construction of the MicroBooNE detector},
+   volume={12},
+   ISSN={1748-0221},
+   url={http://dx.doi.org/10.1088/1748-0221/12/02/P02017},
+   DOI={10.1088/1748-0221/12/02/p02017},
+   number={02},
+   journal={Journal of Instrumentation},
+   publisher={IOP Publishing},
+   author={Acciarri, R. and Adams, C. and An, R. and Aparicio, A. and Aponte, S. and Asaadi, J. and Auger, M. and Ayoub, N. and Bagby, L. and Baller, B. and et al.},
+   year={2017},
+   month={Feb},
+   pages={P02017–P02017}
+}
+
+@article{microboone_crt,
+   title={Design and construction of the MicroBooNE Cosmic Ray Tagger system},
+   volume={14},
+   ISSN={1748-0221},
+   url={http://dx.doi.org/10.1088/1748-0221/14/04/P04004},
+   DOI={10.1088/1748-0221/14/04/p04004},
+   number={04},
+   journal={Journal of Instrumentation},
+   publisher={IOP Publishing},
+   author={Adams, C. and Alrashed, M. and An, R. and Anthony, J. and Asaadi, J. and Ashkenazi, A. and Auger, M. and Balasubramanian, S. and Baller, B. and Barnes, C. and et al.},
+   year={2019},
+   month={Apr},
+   pages={P04004–P04004}
+}
+
+@misc{ICARUS_image,
+  title = "{Schematic of the ICARUS detector. [Online] Available: https://www.symmetrymagazine.org/article/sterile-neutrino-sleuths [2022, January].}",
+  author = {{Sandbox Studio, Chicago}}
+}
+
+@misc{ICARUS_CRT,
+      author        = "Rubbia, C and Montanari, C S",
+      title         = "{Status and plans of WA104/ICARUS}",
+      institution   = "CERN",
+      collaboration = "ICARUS Collaboration",
+      address       = "Geneva",
+      reportNumber  = "CERN-SPSC-2017-012, SPSC-SR-207",
+      month         = "Mar",
+      year          = "2017",
+      url           = "https://cds.cern.ch/record/2256748",
 }
 
 % Shower reco stuff
