--- a/chap2-motivation_for_steriles.tex
+++ b/chap2-motivation_for_steriles.tex
@@ -29,7 +29,7 @@ Following the discovery of the tau lepton in 1975 by the SLAC National Accelerat
 
 \textcolor{red}{More detail on the experiments?}
 
-The three confirmed flavours of neutrinos ($\nu_e, \nu_{\mu}, \nu_{\tau}$) are consistent with predictions from the \Gls{sm}. The number of expected neutrinos may be determined from the decay of the Z-boson since it's lifetime is dependent on the number of flavours.  The lifetime of the Z-boson has been found to be consistent with a three neutrino model \cite{Zboson_number_of_neutrinos}. There have, however, been results from experiments which are inconsistent with the 3 neutrino framework. Namely the excess of events observed by the LSND and MiniBooNE experiments, the deficit of events observed by the SAGE and GALLEX detectors (dubbed the \textit{Gallium Anomaly}) and the deficit of events observed from nuclear reactors (dubbed the \textit{Reactor Anomaly}) \cite{LSND_excess} \cite{MiniBooNE_excess} \cite{GALLEX} \cite{Gallex_reanalysis} \cite{SAGE} \cite{Reactor_anomaly}. Additional neutrino flavours may exist and not contradict the statement on the lifetime of the Z-boson if they have a mass greater than half that of the Z-boson and/or they do not weakly interact and hence don't contribute to the decay rate of the Z-boson. The hypothetical neutrinos which do not weakly interact are know as \textit{sterile} neutrinos in order to distinguish them from the \textit{active} ones that do. Sterile neutrinos will be discussed in greater detail in \SectionRef{subchap:Motivation for Sterile Neutrinos} and \SectionRef{subchap:Theory of Sterile Neutrinos}.
+The three confirmed flavours of neutrinos ($\nu_e, \nu_{\mu}, \nu_{\tau}$) are consistent with predictions from the \Gls{sm}. The number of expected neutrinos may be determined from the decay of the Z-boson since it's lifetime is dependent on the number of flavours. This was done by the \gls{lep} experiment, which found the lifetime of the Z-boson to be consistent with a three neutrino model \cite{Zboson_number_of_neutrinos}\cite{LEP}. There have, however, been results from experiments which are inconsistent with the 3 neutrino framework. Namely the excess of events observed by the LSND and MiniBooNE experiments, the deficit of events observed by the SAGE and GALLEX detectors (dubbed the \textit{Gallium Anomaly}) and the deficit of events observed from nuclear reactors (dubbed the \textit{Reactor Anomaly}) \cite{LSND_excess} \cite{MiniBooNE_excess} \cite{GALLEX} \cite{Gallex_reanalysis} \cite{SAGE} \cite{Reactor_anomaly}. Additional neutrino flavours may exist and not contradict the statement on the lifetime of the Z-boson if they have a mass greater than half that of the Z-boson and/or they do not weakly interact and hence don't contribute to the decay rate of the Z-boson. The hypothetical neutrinos which do not weakly interact are know as \textit{sterile} neutrinos in order to distinguish them from the \textit{active} ones that do. Sterile neutrinos will be discussed in greater detail in \SectionRef{subchap:Motivation for Sterile Neutrinos} and \SectionRef{subchap:Theory of Sterile Neutrinos}.
 
 \section{Overview of Neutrino Physics}
 
@@ -42,16 +42,51 @@ The three confirmed flavours of neutrinos ($\nu_e, \nu_{\mu}, \nu_{\tau}$) are c
     \item SK - evidence of neutrino oscillations
     \item SNO solves solar neutrino problem
 \end{itemize}
-\subsection{Weak interactions??}
-Since neutrinos are neutral fermions, it possible that neutrinos are their own anti-particle (a Majorana Particle). This idea was first proposed in 1937 by Majorana \cite{Majorana2020}. Within the \Gls{sm}, all fermions with the possible exception of neutrinos behave as Dirac fermions, that is the particle and anti-particle are distinct. With the possibility that neutrinos are Majorana in nature, it has lead to the search for neutrinoless double beta decay \cite{Double_beta_decay}. This is a variation on ordinary double beta decay in which a nucleus decays by emitting two electrons simultaneously. In ordinary double beta decay there would also be two (anti)neutrinos in the final state, however if neutrinos are Majorana particles, it can be thought of as one nucleon emitting a neutrino and the other absorbing it hence there are no neutrinos in the final state. Observation of such a decay would confirm the Majorana nature of neutrinos and give direct evidence for physics beyond the \Gls{sm} since the lepton number would not be conserved. 
-\subsection{neutrino mass}
-\subsection{Helicity/chirality }
-Suff on mass and goldhaber experiment
 
-\subsection{Neutrino Oscillations}
+Since neutrinos are neutral fermions, it possible that neutrinos are their own anti-particle (a Majorana Particle). This idea was first proposed in 1937 by Majorana \cite{Majorana2020}. Within the \Gls{sm}, all fermions with the possible exception of neutrinos behave as Dirac fermions, that is the particle and anti-particle are distinct. With the possibility that neutrinos are Majorana in nature, it has lead to the search for neutrinoless double beta decay \cite{Double_beta_decay}. This is a variation on ordinary double beta decay in which a nucleus decays by emitting two electrons simultaneously. In ordinary double beta decay there would also be two (anti)neutrinos in the final state, however if neutrinos are Majorana particles, it can be thought of as one nucleon emitting a neutrino and the other absorbing it hence there are no neutrinos in the final state. Observation of such a decay would confirm the Majorana nature of neutrinos and give direct evidence for physics beyond the \Gls{sm} since the lepton number would not be conserved. Furthermore, neutrino oscillations (which is discussed in \SectionRef{subsec:Neutrino Oscillations}) are at odds with the \gls{sm} assumption that neutrinos are massless. With the requirement that neutrinos are indeed massive, the Dirac or Majorana nature of neutrinos is again discussed in \SectionRef{subsec:Neutrino Mass} within the context of mass generation mechanisms.
+
+\subsection{Helicity and Chirality}
+The helicity of a particle is defined as the projection of its spin onto the linear momentum.  If the spin is aligned with the direction of motion, the particle is said to be \textit{right-handed} and has an eigenvalue equal to +1 whereas if the spin is aligned in the opposite direction a particle is said to be \textit{left-handed} and has an eigenvalue equal to -1 \cite{MartinandShaw}. It was observed by Goldhaber and others that neutrinos appear to exclusively have left-handed helicities (and right-handed helicities for anti-neutrinos). The experiment they used to determine this was as follows; consider the decay of an isomer of europium via electron capture to an excited state of samarium. The samarium nucleus then decays to its ground state by emitting a photon. 
+\begin{equation}
+    ^{152m}Eu + e^- \longrightarrow {^{152}Sm^*} + \nue \longrightarrow ^{152}Sm + \gamma
+\end{equation}
+To conserve momentum, the excited samarium nucleus must recoil in a direction opposite to the emitted neutrino. To conserve angular momentum the spin of the neutrino and the recoiling nucleus must be in opposite directions which means that they both have the same handedness. Finally, the photon emitted will have a spin in the opposite direction to the neutrino and if the photon is emitted in a direction opposite to the neutrino direction, both will have the same helicity. The photons emitted in the direction opposite to the neutrino were identified, their helicity determined and it was found that they were all left-handed \cite{Goldhaber_experiment}. 
+
+Helicity does commute with the Hamiltonian, however it is not Lorentz invariant (for massive particles). Since massive particles travel at speeds less than \textit{c}, it is always possible to boost to frame such that the direction of motion is reversed. Spin is not affected by this which means that it is possible for the sign of the helicity to change. In contrast to helicity, chirality is a Lorentz invariant quantity that does not commute with the Hamiltonian. The chirality operator is $\gamma^5$ and it is defined as $i\gamma^0\gamma^1\gamma^2\gamma^3$ (i.e. \textit{i} times the product of the gamma matrices). Similarly to helicity, when the chirality operator acts on the eigenfunctions $\psi_R$ and $\psi_L$ it results in an eigenvalue of +1 and -1 respectively. It is commonly expressed in term of projection operators $P_{(L, R)}$ such that,
+\begin{equation}
+\begin{split}
+    \psi_L &= P_L\psi \isdefined \frac{1-\gamma^5}{2}\psi \\
+    \psi_R &= P_R\psi \isdefined \frac{1+\gamma^5}{2}\psi,
+\end{split}
+\end{equation}
+where $\psi$ is a spinor which can be written in terms of left and right chiral components, $\psi = \psi_L + \psi_R$.
+Since $P_{(L,R)}^\hermitianT = P_{(L,R)}$ and $P_{(L,R)}\gamma^0 = \gamma^0P_{(R,L)}$, it follows that
+\begin{equation}\label{eqn:chiral identity}
+    \overline{\psi_L}\psi_L = \overline{\psi_R}\psi_R = 0.
+\end{equation}
+It should be noted that for massless particles, helicity is Lorentz invariant and becomes identical to chirality.  
+\cite{Fundamentals_of_Neutrino_Physics_and_Astrophysics}
+
+\subsection{Weak Interactions and CP violation}
+\textcolor{red}{NOT SURE I LIKE HOW THIS SECTION FLOWS..}
+
+The weak force is mediated by the charged $W^\pm$ and neutral $Z^0$ bosons and is responsible for radioactive decay. It is dubbed \textit{weak} because if the strong or \gls{em} forces are also present the weak force is usually subdominant. The active neutrinos only interact via the weak force (and gravity) which is one of the reasons they have been historically difficult to detect. 
+
+It was shown experimentally by Wu that \gls{p} conservation is violated and later by Cronin and Fitch that \gls{cp} conservation is also violated \cite{Wu_experiment}\cite{Cronin_and_Fitch_experiment}. \gls{cp} violation is one of the Sakharov conditions required to have a matter-antimatter asymmetry in the universes, however, the amount of \gls{cp} violation seen in the quark sector is seemingly insufficient to explain the matter dominated universe we observe \cite{Sakharov_conditions}. There may also be \gls{cp} violation from the \gls{pmns} matrix in the lepton sector which could help explain the matter-antimatter asymmetry. However, the amount of \gls{cp} violation in the lepton sector, if any, is currently unknown. 
+
+The weak charged current, $j^{CC}_{weak}$ may be expressed as, 
+\begin{equation}\label{eqn:weak current}
+    j^{CC}_{weak} = \frac{g_w}{\sqrt{2}}\Bar{\psi}\gamma^{\mu}\frac{1}{2}(1-\gamma^5)\psi,
+\end{equation}
+where $g_w$ is the coupling factor.
+This has the form of a vector-axial (V-A) interaction, where the vector current is given by $\Bar{\psi}\gamma^\mu\psi$ and the axial current is given by $\Bar{\psi}\gamma^\mu\gamma^5\psi$. The axial component remains unchanged under a parity transformation, whereas the sign of the vector component changes. We are usually interested in the square of the amplitude, which in short means taking the square of the weak current. This results in a squared vector and axial component plus a cross term. Since the axial and vector components behave differently under a parity transformation, this cross term lead to parity violation. 
+
+Because the projection operator, $P_L$, appears in \EquationRef{eqn:weak current} it follows that weak interactions only apply to left-handed particles (and right-handed antiparticles). Neutrinos only interact via the weak force which means they are therefore produced with a left-handed chirality and since they are ultra-relativistic, for all intents and purposes they also have a left-handed helicity. 
+
+\subsection{Neutrino Oscillations}\label{subsec:Neutrino Oscillations}
 Another unique property of neutrinos are their ability to oscillate. That is, the neutrino flavour may change as it propagates. This phenomenon was first proposed by Pontecorvo in 1957 \cite{Pontecorvo}. In the following years this work was built upon by Maki, Nakagawa, Sakata and Pontecorvo himself \cite{MNS_oscillations}. 
 
-One of the first experimental results to eventually be explained be neutrino oscillations was the Homestake experiment. This was an experiment in the 1960's that was designed to count the number of solar neutrinos. The crux of the experiment was to fill an underground tank with dry-cleaning fluid (perchloroethylene) since it contains chlorine. The solar neutrinos would be detected by inverse beta decay via
+One of the first experimental results to eventually be explained by neutrino oscillations was the Homestake experiment. This was an experiment in the 1960's that was designed to count the number of solar neutrinos. The crux of the experiment was to fill an underground tank with dry-cleaning fluid (perchloroethylene) since it contains chlorine. The solar neutrinos would be detected by inverse beta decay via
 \begin{equation}
     ^{37}Cl + \nue \longrightarrow {^{37}Ar} + \electron
 \end{equation}
@@ -59,9 +94,9 @@ where the argon would be extracted and counted as it decayed. From this, the num
 
 The ratio of muon to electron neutrinos produced in the atmosphere from the decay of pions and muons was also studied. The predicted rate of neutrinos in the atmosphere was thought to be well understood, however a number of experiments, the most notable of which \Gls{sk}, all observed ratios significantly below the expected value. This indicated a deficit in the observed muon neutrinos or an excess in electron neutrinos (or both). Mirroring the solar neutrino problem, these observation were dubbed the \textit{Atmospheric Neutrino Anomaly} \cite{Atmospheric_anomaly}.
 
-In addition to measuring the ratio of atmospheric neutrinos, \Gls{sk} was also able to measure the zenith angle of the incoming neutrinos. This allowed the observed and predicted number of neutrinos to be compared as a function of the zenith angle. It was noted that the number of electron neutrinos agreed reasonably well with the expected value across all angles whereas for low energy muon neutrinos there was a deficit of events for all angles and for high energy muons there was a deficit of events for zenith angles corresponding to large distances travelled (e.g. neutrinos which travelled through the earth and into the detector from below). The observed rate of high energy muons at angles corresponding to travelling directly down from the atmosphere to the detector agreed with predicted value \cite{SuperK_neutrino_oscillations}. 
+In addition to measuring the ratio of atmospheric neutrinos, \Gls{sk} was also able to measure the zenith angle of the incoming neutrinos. This allowed the observed and predicted number of neutrinos to be compared as a function of the zenith angle. It was noted that the number of electron neutrinos agreed reasonably well with the expected value across all angles whereas for low energy muon neutrinos there was a deficit of events for all angles and for high energy muons there was a deficit of events for zenith angles corresponding to large distances travelled (e.g. neutrinos which travelled through the earth and into the detector from below). The observed rate of high energy muons at angles corresponding to travelling directly down from the atmosphere to the detector agreed with predicted values \cite{SuperK_neutrino_oscillations}. 
 
-The results published by \gls{sk} 1998 allowed the atmospheric neutrino anomaly to be reconciled with neutrino oscillations and was the first time neutrino oscillations were confirmed to have been observed \cite{SuperK_neutrino_oscillations}. Shortly after, in 2001, the \Gls{sno} experiment resolved the solar neutrino problem by again explaining the deficit in observed electron neutrinos as a result of neutrino oscillations. The \gls{sno} detector was designed with the intention of being able to measure the total neutrino flux (the sum of all three flavours) and the electron neutrino flux in isolation. The detector consisted of a tank of heavy water. Solar neutrinos have sufficient energy to interact via \gls{nc} with the deuterium in the heavy water regardless of neutrino flavour,
+The results published by \gls{sk} in 1998 allowed the atmospheric neutrino anomaly to be reconciled with neutrino oscillations and was the first time neutrino oscillations were confirmed to have been observed \cite{SuperK_neutrino_oscillations}. Shortly after, in 2001, the \Gls{sno} resolved the solar neutrino problem by again explaining the deficit in observed electron neutrinos as a result of neutrino oscillations. The \gls{sno} detector was designed with the intention of being able to measure the total neutrino flux (the sum of all three flavours) and the electron neutrino flux in isolation. The detector consisted of a tank of heavy water. Solar neutrinos have sufficient energy to interact via \gls{nc} interactions with the deuterium in the heavy water regardless of neutrino flavour,
 \begin{equation}
     \nu + d \longrightarrow \nu + p + n.
 \end{equation}
@@ -74,7 +109,7 @@ Finally, only electron neutrinos may interact via \gls{cc},
 \begin{equation}
     \nue + d \longrightarrow p + p + \electron,
 \end{equation}
-therefore this channel only measure the flux of \nue. Confirmation that the flux of \nue was less than the flux from the \gls{nc} or \gls{es} channels coupled with the fact that the \nue flux was in agreement with previous solar neutrino experiments was sufficient to resolve the solar neutrino problem \cite{SNO_solar_neutrinos}.
+therefore this channel only measured the flux of \nue. Confirmation that the flux of \nue was less than the flux from the \gls{nc} or \gls{es} channels coupled with the fact that the \nue flux was in agreement with previous solar neutrino experiments was sufficient to resolve the solar neutrino problem \cite{SNO_solar_neutrinos}.
 
 
 Neutrino oscillations is one of the key topics in the field and this thesis. In the remainder of this section we will discuss the theory of neutrino oscillations. The three flavour states (\nue, \numu, \nutau) have already been established, but with the confirmation of neutrino oscillations the three corresponding mass states (\nuone, \nutwo, \nuthree) are required to be distinct from the flavour states. The flavour eigenstate of a neutrino is what is observed, however each flavour state is a superposition of the three mass states. As a neutrino propagates, the mass states propagate at different rates and thus the relative phase between the states is continuously changing. When a neutrino then interacts, it will have a certain set of mass states which correspond to a superposition of the flavour states. The flavour superposition will then collapse into a single flavour and this what is then detected. This is the mechanism which allows neutrino flavours to oscillate. 
@@ -83,7 +118,7 @@ The transformation between the flavour and mass states may be expressed as
 \begin{equation}\label{eqn:state transformation}
     \ket{\nu_\alpha} = \sum_k U^*_{\alpha k} \ket{\nu_k},
 \end{equation}
-where $\alpha$ $\in$ (e, $\mu$, $\tau$), k $\in$ (1, 2, 3) and U is a unitary rotation matrix. In the case of three flavour neutrino oscillations, U is known as the \gls{pmns} mixing matrix which is a $3 \times 3$ matrix representing the three different states. The \gls{pmns} matrix is parameterised in terms of three mixing angles ($\theta_{12}, \theta_{13}, \theta_{23}$) and a \gls{cp} violating phase, \textit{$\Kronecker_{cp}$}, as
+where $\alpha$ $\in$ (e, $\mu$, $\tau$), k $\in$ (1, 2, 3) and \textit{U} is a unitary rotation matrix. In the case of three flavour neutrino oscillations, \textit{U}, is known as the \gls{pmns} mixing matrix which is a $3 \times 3$ matrix representing the three different states. The \gls{pmns} matrix is parameterised in terms of three mixing angles ($\theta_{12}, \theta_{13}, \theta_{23}$) and a \gls{cp} violating phase, \textit{$\Kronecker_{cp}$}, as
 \begin{equation}
 \begin{split}
 U &= 
@@ -112,15 +147,15 @@ c_{12} & s_{12} & 0 \\
 \end{equation}
 where $c_{kj} = \cos{\theta_{kj}}$ and $s_{kj} = \sin{\theta_{kj}}$.
 
-The time evolution of the mass states is given by the time dependent Schr{\"o}dinger equation
+Since the neutrino mass states are eigenstates of the Hamiltonian, \textit{H}, the time evolution of the mass states is given by the time dependent Schr{\"o}dinger equation
 \begin{equation} \label{eqn:t.d. schrodinger}
-    i \dByd{}{t}\ket{\nu_{k}(t)} = H \ket{\nu_{k}(t)}
+    i \dByd{}{t}\ket{\nu_{k}(t)} = H \ket{\nu_{k}(t)}.
 \end{equation}
-where \textit{H} is the Hamiltonian. It can be seen that the solution to \EquationRef{eqn:t.d. schrodinger} is given by a plane wave solution 
+It can be seen that the solution to \EquationRef{eqn:t.d. schrodinger} is given by a plane wave solution 
 \begin{equation}\label{eqn:plane wave soln}
     \ket{\nu_{k}(t)} = e^{-iE_{k}t} \ket{\nu_{k}}.
 \end{equation}
-The amplitude of a transition is defined as the projection of the final state onto the initial state, so for the the flavour transitions the amplitude is given by
+The amplitude of a transition is defined as the projection of the final state onto the initial state, so for flavour oscillations the amplitude is given by
 \begin{equation}
     A_{\nu_\alpha \rightarrow \nu_\beta}(t) \isdefinedas \braket{\nu_\beta|\nu_\alpha(t)}.
 \end{equation}
@@ -161,8 +196,18 @@ Finally, in a two flavour oscillation regime, the oscillation probability may be
 \end{equation}
 where the mixing matrix has been reduced to a rotation matrix. 
 
+It should be noted that what neutrino experiments probe is the mass splitting and not the absolute neutrino masses. It is understood from oscillation experiments that, $\Delta m_{21}^2$, known as the solar mass splitting, is equal to $7.5 \times 10^{-5}$ eV$^2$ and that $|\Delta m_{31}^2|$, known as the atmospheric mass splitting, is equal to $2.4 \times 10^{-3}$ eV$^2$. The sign of the atmospheric mass splitting is however unknown i.e. it is an open question whether $m_3$ is the heaviest or the lightest neutrino mass state. This leads to two possibilities, the so called \textit{normal hierarchy} where the neutrino mass states increase from $m_{1 \rightarrow 2 \rightarrow 3}$ or the \textit{inverted hierarchy} where the mass states increase from $m_{3 \rightarrow 1 \rightarrow 2}$. 
 
-\begin{table}[]
+The nature of the neutrino hierarchy has major impacts on several areas. Within the inverted hierarchy, there is a lower bound on the Majorana mass of the electron neutrino mass. If neutrinoless double beta decay experiments can put bounds on the neutrino mass below this, the inverted hierarchy may be ruled out (under the assumption that neutrinos are Majorana in nature). Alternatively, if the inverted hierarchy is realised, neutrinoless double beta experiments are promising ways to determine whether neutrinos are Majorana particles or not. There are also a number of theories which predict either the normal or inverted hierarchy, so determining the hierarchy will be strong motivator in determining the credibility of a given theory \cite{mass_hierarchy}.
+
+\begin{figure}
+    \centering
+    \includegraphics[width = \largefigwidth]{figures-chap2/mass_hierarchy.jpg}
+    \caption{Diagrammatic representation of the normal hierarchy (left) and the inverted hierarchy (right). The flavour contributions to each mass state are illustrated by the different colours.}
+    \label{fig:my_label}
+\end{figure}
+
+\begin{table}
 \begin{tabular}{l|ll}
 \multicolumn{1}{c|}{\multirow{2}{*}{Parameter}} & \multicolumn{2}{c}{Best Fit}                                                                           \\
 \multicolumn{1}{c|}{} & \multicolumn{1}{c}{Normal Hierarchy} & \multicolumn{1}{c}{Inverted Hierarchy}   \\  \hline \hline
@@ -189,7 +234,106 @@ $\delta_{CP}$       & \multicolumn{1}{l|}{$1.36^{+0.20}_{-0.16} \pi$ rad}       
     \item Neutrinos are massive - need right handed neutrino to generate 'Dirac' mass.. 
 \end{itemize}
 
+There have been a number of experimental results which are not consistent with oscillations in a three neutrino model. Most of these anomalous results can be explained by oscillations with one or more eV scale neutrinos pointing towards the existence of at least one eV scale neutrino. The experiments which have seen results seemingly in favour of eV scale sterile neutrinos will be discussed in the upcoming sections. There are however tensions between the results in favour of additional neutrino flavours and the null results from experiments such as \gls{karmen} and \gls{minos}. The  \gls{karmen}  experiment  was  sensitive  to $\numu \rightarrow \nue$  and  $\numubar \rightarrow \nuebar$ over a baseline of 17.6 m.  No evidence of oscillations were found and a 90\% confidence level exclusion limit was placed on $\Delta m^2 > 100$ $eV^2$ with $\sin^2{2\theta} < 4\times 10^{-2}$ and $\sin^2{2\theta} < 8.5 \times 10^{-3}$ for neutrinos and anti-neutrinos respectively \cite{KARMEN}.  The \gls{minos} experiment used a predominantly muon-neutrino beam with a peak energy of 3 GeV with the near detector being at a baseline of 1.04 km.  Again, no evidence of oscillations was observed.  For a mass splitting of $\Delta m^2_{42} = 0.5 eV^2$, the value of $\sin^2{2\theta_{24}}$ was constrained to be less than 0.016 for a 90\% confidence level \cite{MINOS}.
+
+\subsection{LSND}
+The \gls{lsnd} experiment involved a close to 800 MeV proton beam which produced mainly $\pi^+$ and was designed to mainly search for $\numubar \rightarrow \nuebar$ appearance where the \numubar's were a result from the decay of anti-muons which in turn were produced from the decay of at rest $\pi^+$. The detector consisted of a tank filled with 167 tons of liquid scintillator positioned 30m from the neutrino beam source and was able to detect both Cerenkov and scintillation light. The \nuebar appearance signal was identified from the $\nuebar + p \rightarrow \positron + n$ reaction with the signature of the reaction being the energy of the \positron and the energy of a gamma as a result of neutron capture on a free proton. The \gls{lsnd} experiment observed an excess of 87.96 \pm 22.46 \pm 6.0 $\nuebar + p \rightarrow \positron + n$ events which corresponds to a 3.8$\sigma$ excess which is shown in \FigureRef{fig:LSND excess} \cite{LSND_excess}. This was the first experiment to point towards the existence of an eV scale neutrino. 
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width = \largefigwidth]{figures-chap2/LSND_excess.png}
+    \caption{The \gls{lsnd} excess as a function of the neutrino L/E value. Events require a positron in the energy range $20 < E < 60$ MeV and a likelihood ratio of > 10 that the associated gamma was correlated (i.e. $\frac{\mathcal{L}_{\gamma}(correlated)}{\mathcal{L}_{\gamma}(accidental)} > 10$). \cite{LSND_excess}}
+    \label{fig:LSND excess}
+\end{figure}
+\newpage
+
+\subsection{MiniBooNE}
+The \gls{miniboone} collected data from the \gls{bnb} operating in both neutrino and anti-neutrino mode. The \gls{bnb} is described in detail in \SectionRef{sec:BNB}. The (anti)neutrinos had an energy range of $200 < E_\nu < 1250$ MeV and the baseline of the experiment was 540m. Similar to \gls{lsnd}, \gls{miniboone} was searching for  $\overset{\scriptscriptstyle(-)}{\nue}$ appearance from a predominantly $\overset{\scriptscriptstyle(-)}{\numu}$ beam. In neutrino mode, \gls{miniboone} observed an excess of 381.2\pm85.2 \gls{ccqe} events which corresponds to a 4.5$\sigma$ excess. This is shown in \FigureRef{fig:MiniBooNE excess}. Combining this with the anti-neutrino data, an excess of 460.5\pm99.0 \gls{ccqe} events (4.7$\sigma$) were observed. A two neutrino model is assumed so that a comparison with \gls{lsnd} data can be made, however this results in the appearance and disappearance data not being compatible with one another. This may be resolved by assuming a different model to the 3+1 neutrino framework. The results are consistent with those seen by \gls{lsnd} and again point to the existence of additional neutrino flavours beyond the three predicted by the \gls{sm} \cite{MiniBooNE_excess}. 
+\begin{figure}[h]
+    \centering
+    \includegraphics[width = \largefigwidth]{figures-chap2/MiniBooNE_excess.png}
+    \caption{The MiniBooNE excess from \nue CCQE events. The best fit line assumed two neutrino oscillations \cite{MiniBooNE_excess}.}
+    \label{fig:MiniBooNE excess}
+\end{figure}
+\newpage
+
+\subsection{Gallium Anomaly}
+The \textit{Gallium Anomaly} refers to the apparent deficit of electron neutrinos observed by placing radioactive sources which decay via electron capture in the solar neutrino experiments, \gls{sage} and \gls{gallex}. The \gls{gallex} experiment utilised two separate $^{51}Cr$ neutrino sources. The key measured quantity was the production of $^{71}Ge$ due to transformation of $^{71}Ga$ via inverse beta decay. The strength of the $^{51}Cr$ neutrino sources was measured directly and via the production of $^{71}Ge$. The combined ratio of the strength of the two sources was found to be 0.93\pm0.08 \cite{GALLEX}. A later reanalysis of the results from \gls{gallex} with new technical data gave a ratio of 0.902\pm0.078 \cite{Gallex_reanalysis}. Similar to the \gls{gallex} experiment, the \gls{sage} experiment also compared the strength of a neutrino source from direct measurements and the production of $^{71}Ge$. \gls{sage} used both a $^{51}Cr$ and a $^{37}Ar$ source.  \gls{sage} observed a ratio 0.95\pm0.12 for the $^{51}Cr$ source and a ratio of $0.79^{+0.09}_{-0.10}$ for the $^{37}Ar$ source. The weighted average from the results from the two sources from \gls{sage} and the reevaluated values from the two \gls{gallex} sources is 0.88\pm0.05 \cite{SAGE}.
+
+\subsection{Reactor Anomaly}
+The \textit{Reactor Anomaly} refers to the apparent deficit of anti-electron neutrinos produced from neutron rich fission products such as $^{235}U, ^{238}U, ^{239}Pu$ and $^{241}Pu$ undergoing  $\beta$-decay. For most cases this involves placing a detector within a 100m of a reactor and measuring the ratio of observed to predicted event rates. The average ratio is 0.943\pm0.023. It is acknowledged that the reactor fluxes may not be perfectly understood which could be the cause for such a deficit, however it should be noted that other experiments have observed similar deficits for comparable L/E ranges \cite{Reactor_anomaly}. 
+
+\subsection{Theoretical Motivation}
+With the experimental confirmation that neutrinos are massive,  there is clear motivation to try and attempt to include sterile neutrinos in theoretical models. The initial mass scale for sterile neutrinos is unconstrained, however the "Type 1" \textit{Seesaw model} which attempts to explain the relative size of neutrino masses points towards very heave sterile neutrino masses ($\gg ~1$ eV).
+\cite{White_Paper}
+
+
 \section{Theory of Sterile Neutrinos}\label{subchap:Theory of Sterile Neutrinos}
+\subsection{Neutrino Mass}\label{subsec:Neutrino Mass}
+The \gls{sm} Lagrangian, \textit{L}, for a fermion is given by
+\begin{equation}\label{eqn:SM Lagrangian}
+    L = \Bar{\psi}(i\gamma^{\mu} \partial_{\mu} - m)\psi
+\end{equation}
+with the solution being the Dirac equation given by
+\begin{equation}
+    (i\gamma^\mu\partial_\mu - m)\psi = 0
+\end{equation}
+\subsubsection{Dirac Mass}
+Within the \gls{sm} Lagrangian, the Dirac mass term is given by $m\Bar{\psi}\psi$ where $\psi$ is the Dirac spinor. By dividing this into left and right components we have 
+\begin{equation}\label{eqn:Dirac mass term}
+\begin{split}
+    m_D\Bar{\psi}\psi &= m_D(\overline{\psi_L + \psi_R})(\psi_L + \psi_R) \\
+    &= m_D(\overline{\psi_L}\psi_R + \overline{\psi_R}\psi_L),
+\end{split}
+\end{equation} 
+where the second step follows from \EquationRef{eqn:chiral identity}. Naturally, to have a non-zero Dirac mass term, particles require a left and right handed chiral state. This is the mass generation method that all particles in the \gls{sm} follow and hence why neutrinos are massless in the \gls{sm}. To give the neutrino mass in this way, we could just introduce a field associated with a right handed neutrino. This would usually correspond to the left handed neutrinos being the \textit{active} ones, whilst the right handed neutrinos would be considered \textit{sterile}. Since left handed particles form a doublet under \SUgroup2 they have non-zero weak isospin and because right handed particles are a singlet under \SUgroup2, their weak isospin is equal to zero. Therefore, in order to get a term where the isospin sums to zero, which is a requirement to be gauge invariant, an additional field is needed that is also a doublet under \SUgroup2. This field is a result of the neutral Higgs boson, $\phi^0$, and the Dirac mass is given by
+\begin{equation}
+    m_D = y\braket{\phi^0} = \frac{yv}{\sqrt{2}},
+\end{equation}
+where \textit{y} is the Yukawa coupling and \textit{v} gives the weak scale ($v \simeq$ 246 GeV). A concern with generating neutrino masses in this way is the required size of the Yukawa coupling. To generate a mass of say 0.1 eV, the Yukawa coupling would need to be very small ($\sim$ 6 orders of magnitude less than that of the electron). This small number is sometimes considered unnatural and provides motivation to search for alternative mass mechanisms to explain the neutrino masses.
+
+\cite{White_Paper}
+
+\subsubsection{Majorana Mass}
+If we want to insist on generating mass without the requirement of a right handed field, we require the neutrino to be a Majorana particle. It may be shown that 
+\begin{equation}
+    \psi_R = C\overline{\psi_L}^T,
+\end{equation}
+where the superscript \textit{T} indicates the transpose and $C = i \gamma^2 \gamma^0$ which is the charge conjugation eigen value. By defining $\psi_L^C = C\overline{\psi_L}^T$, the Majorana field may then be written as
+\begin{equation}
+    \psi = \psi_L + \psi_R = \psi_L + \psi_L^C.
+\end{equation}
+Combining this with the mass term in \EquationRef{eqn:SM Lagrangian}, the left handed Majorana mass term is given by 
+\begin{equation}\label{eqn:Majorana mass term}
+    \frac{m_L}{2}(\overline{\psi_L}^C\psi_L + \overline{\psi_L}\psi_L^C)
+\end{equation}
+where the factor of 1/2 arises due to double counting. As before, in order to get the weak isospin to sum to zero the Higgs field needs to be introduced, but in this case a Higgs triplet (instead of doublet) is required. However, within the \gls{sm}, a Higgs triplet isn't allowed and there doesn't seem to be any experimental evidence for one either. 
+
+\subsubsection{Seesaw mechanism}
+In the general case, we have four neutrino fields, a left and right handed one plus a charge conjugate version of each. This allows us to create a left and right Majorana mass term akin to \EquationRef{eqn:Majorana mass term} and a regular and charge conjugated Dirac mass akin to \EquationRef{eqn:Dirac mass term} (the Dirac mass, $m_D$ is the same in both cases). The mass component of the Lagrangian, $L_{mass}$, may be written as a matrix equation, 
+\begin{equation}
+    L_{mass} = \frac{1}{2} 
+    \begin{pmatrix}
+    \overline{\psi_L}^C & \overline{\psi_R}
+    \end{pmatrix}
+    \begin{pmatrix}
+    m_L & m_D \\
+    m_D & m_R
+    \end{pmatrix}
+    \twomatrix {\psi_L} {\psi_R^C} + h.c.
+\end{equation}
+where the central $4 \times 4$ matrix is known as the mass matrix, $\mathcal{M}$. By diagonalising $\mathcal{M}$ into mass eigenstates, $m_1, m_2$, and assuming $m_L = 0$ (since it isn't allowed in the \gls{sm}) and that $m_R \gg m_D$, the mass eigenstates may be expressed as
+\begin{equation}
+\begin{split}
+    m_1 \simeq \frac{m_D^2}{m_R} \\
+    m_2 \simeq m_R.
+\end{split}
+\end{equation}
+Since we have said that $m_R \gg m_D$, $m_2$ is also large and $m_1$ is small since the value of $m_D^2$ is suppressed by the large value of $m_R$ in the denominator. Furthermore, the larger the value of $m_2$, the smaller the value of $m_1$. This linked relationship gives rise to the so-called \textit{seesaw mechanism}. $m_1$ would give the mass scale of the active neutrinos whereas $m_2$ would be a heavy sterile neutrino. This mechanism does require neutrinos to be Majorana particles, but does provide an explanation on the relative smallness of the neutrino masses compared with other \gls{sm} particles. 
+
+
+\subsection{Sterile Neutrino Oscillations}
+
 \begin{equation}
 \begin{pmatrix}
 U_{e1} & U_{e2} & U_{e3} & U_{e4} & \dots\\
@@ -200,7 +344,7 @@ U_{s1} & U_{s2} & U_{s3} & U_{s4} & \dots \\
 \end{pmatrix} 
 \end{equation}
 
-In the case that $\Delta m^2_{41} >> |\Delta m^2_{31}|, \Delta m^2_{21}$, short baseline oscillation are well represented by the two flavour oscillation probability,
+Within a (3 + 1) framework and assuming that $\Delta m^2_{41} \gg |\Delta m^2_{31}|, \Delta m^2_{21}$, short baseline oscillation are well represented by the two flavour oscillation probability,
 
 \begin{equation}
     P_{\nu_\alpha \rightarrow \nu_\beta} = \Kronecker_{\alpha \beta} -4|U_{\alpha \beta}|^2 (\Kronecker_{\alpha \beta} -|U_{\alpha \beta}|^2)sin^2(\frac{\Delta m^2_{41}L}{4E})
@@ -212,7 +356,10 @@ In the case that $\Delta m^2_{41} >> |\Delta m^2_{31}|, \Delta m^2_{21}$, short 
     sin^22\thetaee   &\isdefinedas 4|U_{e 4}|^2(1 - |U_{e4}|^2) 
 \end{equation}
 
-Note that \nue appearance depends on $U_{\mu 4}$ and $U_{e4}$ - this allows these parameters to be over consttrained etc..
+Note that \nue appearance depends on $U_{\mu 4}$ and $U_{e4}$ - this allows these parameters to be over constrained etc..
+
+\textcolor{red}{SOME GLOBAL OVERVIEW OF STERILE NEUTRINOS??}
+
 
 %\begin{fmffile}{diagram}
 %\begin{fmfgraph*}(200,150)
