--- a/preamble.tex
+++ b/preamble.tex
@@ -12,6 +12,10 @@
 \input{glossary}
 \makeglossaries
 
+\usepackage[a4paper,
+            left=40mm,
+            right=25mm]{geometry}
+
 %% Using Babel allows other languages to be used and mixed-in easily
 %\usepackage[ngerman,english]{babel}
 \usepackage[english]{babel}
